--- a/css/stail.css
+++ b/css/stail.css
@@ -5,7 +5,8 @@
 }
 
 body{
-    background: #f5f7fa;
+   background: rgb(7, 29, 138);
+   background: radial-gradient(circle, rgba(7, 29, 138, 1) 0%, rgba(32, 25, 26, 1) 100%);
     padding-right: 20px;
     padding-left: 20px;
     padding-top: 40px;
@@ -15,14 +16,14 @@ body{
 .wrapper{
     background: #ffff;
     display: flex;
-    max-width: 1200px;
+    max-width: 1150px;
     margin: 0 auto;
     box-shadow: 5px 9px 20px rgba(0, 0, 0, 0.15);
 }
 .seitbar{
-    background: #090225;
+    background: rgb(5, 6, 111);
+    background: linear-gradient(0deg, rgba(5, 6, 111, 1) 0%, rgba(17, 166, 164, 1) 100%);
     width: 370px;
-    padding-top: 40px;
 
 }
 .my-photo{
@@ -30,9 +31,11 @@ body{
     
 }
 .about-me-container{
+    background: rgb(246, 246, 246);
+    background: radial-gradient(circle, rgba(246, 246, 246, 1) 0%, rgba(148, 187, 233, 1) 100%);
     padding-left: 90px;
     padding-right: 90px;
-    padding-top: 110px;
+    padding-top: 60px;
     padding-bottom: 110px;
 }
 .contakt-container{
@@ -114,7 +117,7 @@ body{
     color: #ffff;
 }
 .profession{
-    font-size: 14px;
+    font-size: 20px;
     font-weight: 700;
     line-height: 24px;
     margin-bottom: 25px;
